# gchimp

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: rust.yml
bsp/: Cargo.toml
bsp/src/: constants.rs  error.rs  lib.rs  parser.rs  types.rs  utils.rs  writer.rs
bsp/src/tests/: bsp_compile.bsp  bsp_out.bsp  normal.bsp  normal_out.bsp
byte_writer/: Cargo.toml
byte_writer/src/: lib.rs
common/: Cargo.toml
common/src/: constants.rs  img_stuffs.rs  lib.rs  setup_studio_model_transformations.rs
gchimp/: Cargo.toml  README.md
gchimp-native/: Cargo.toml  README.md
gchimp-native/src/: main.rs  persistent_storage.rs
gchimp-native/src/cli/: check_illegal_brush.rs  check_missing_texture.rs  custom_script.rs  join_mdl.rs  light_scale.rs  loop_wave.rs  map2mdl.rs  mod.rs  rename_texture.rs  resmake.rs  rotate_prop_static.rs  s2g.rs  smd_compile.rs  split_model.rs  texture_scale.rs
gchimp-native/src/gui/: constants.rs  mod.rs  pane.rs  utils.rs
gchimp-native/src/gui/programs/: blbh.rs  demdoc.rs  map2mdl.rs  misc.rs  mod.rs  s2g.rs  skymod.rs  textile.rs  waddy.rs
gchimp-native/src/gui/programs/mdlscrub/: mod.rs  tile.rs
gchimp-native/src/gui/programs/mdlscrub/render/: camera.rs  mdlscrub_shader.wgsl  mipmap_array.rs  mod.rs  mvp.rs  pipeline.rs  texture_array.rs
gchimp-native/src/gui/programs/mdlscrub/render/mdl_buffer/: dynamic_buffer.rs  mod.rs  util.rs
gchimp-native/src/gui2/: constants.rs  mod.rs  styles.rs  utils.rs
gchimp-native/src/gui2/programs/: misc.rs  mod.rs  playground.rs  waddy.rs
gchimp-native/src/gui2/programs/waddy/: context_menu.rs  menu_bar.rs  mod.rs  tile.rs
gchimp-web/: Cargo.toml  README.md
gchimp-web/src/: lib.rs  utils.rs
gchimp-web/www/: .gitignore  GCHIMP-WEB-README.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
gchimp-web/www/public/: gchimp_web_bg.wasm
gchimp-web/www/src/app/: footer.tsx  globals.css  header.tsx  layout.tsx  main.tsx  page.module.css  page.tsx
gchimp-web/www/src/components/button/: index.tsx  styles.css
gchimp-web/www/src/components/labelled-checkbox/: index.tsx  styles.css
gchimp-web/www/src/components/radio-group/: index.tsx  styles.css
gchimp-web/www/src/components/upload-button/: index.tsx  styles.css
gchimp-web/www/src/hooks/: useGChimp.ts
gchimp-web/www/src/programs/: index.tsx  styles.css
gchimp-web/www/src/programs/bsp2wad/: index.tsx  styles.css
gchimp-web/www/src/programs/dem2cam/: index.tsx  styles.css
gchimp-web/www/src/programs/resmake/: index.tsx  styles.css
gchimp-web/www/src/programs/smd_split/: index.tsx  styles.css
gchimp-web/www/src/programs/wave-loop/: index.tsx  styles.css
gchimp/src/: entity.rs  gchimp_info.rs  lib.rs
gchimp/src/modules/: blender_lightmap_baker_helper.rs  bsp2wad.rs  dem2cam.rs  duplicate_triangle.rs  find_low_scaling.rs  light_scale.rs  loop_wave.rs  mod.rs  rename_texture.rs  resmake.rs  rotate_prop_static.rs  skymod.rs  split_model.rs  textile.rs  texture_scale.rs  waddy.rs
gchimp/src/modules/___random_specific_stuffs/: make_func_door_every_xth_block.rs  mod.rs  normal_rename_tex.rs
gchimp/src/modules/demdoc/: check_doctored.rs  ghost2dem.rs  mod.rs  print_jump_distance.rs
gchimp/src/modules/demdoc/get_ghost/: mod.rs  surf_gateway.rs
gchimp/src/modules/demdoc/kz_stats/: add_keys.rs  add_speedometer.rs  mod.rs
gchimp/src/modules/join_mdl/: entity.rs  error.rs  mod.rs
gchimp/src/modules/map2mdl/: entity.rs  mod.rs
gchimp/src/modules/s2g/: constants.rs  mod.rs
gchimp/src/utils/: constants.rs  img_stuffs.rs  map_stuffs.rs  mdl_stuffs.rs  misc.rs  mod.rs  qc_stuffs.rs  run_bin.rs  simple_calculs.rs  smd_stuffs.rs  studiomdl.rs  wad_stuffs.rs
gchimp/src/utils/dem_stuffs/: mod.rs
gchimp/src/utils/dem_stuffs/get_ghost/: demo.rs  mod.rs  romanian_jumpers.rs  simen.rs  surf_gateway.rs
gchimp/src/utils/stuffs/: cstrike_resource.txt
gchimp/test/: rainbow.vtf
map/: Cargo.toml
map/src/: lib.rs  parser.rs  types.rs  utils.rs  writer.rs
map/test/: sky_vis.map
mdl/: Cargo.toml
mdl/src/: constants.rs  error.rs  lib.rs  nom_helpers.rs  parser.rs  types.rs  writer.rs
mdl/src/tests/: arte_farte_bhop.mdl  arte_farte_bhop_parse_write.mdl  multi_model.mdl  static_tree.mdl  static_tree_combined.mdl  static_tree_combinedaaa.mdl  static_tree_parse_write.mdl
qc/: Cargo.toml
qc/src/: lib.rs  parser.rs  types.rs  utils.rs
qc/test/: arrowframe.qc  s1_r012-goldsrc.qc  s1_r012.qc  some.qc  willbreakanyway_001.qc
smd/: Cargo.toml
smd/src/: extras.rs  lib.rs  parser.rs  types.rs  utils.rs  writer.rs
smd/test/: cyberwave_goldsrc.smd  idle.smd  s1_r05_ref.smd  willbreakanyway_001_ref.smd
spr/: Cargo.toml
spr/src/: error.rs  lib.rs  parser.rs  types.rs  utils.rs  writer.rs
src/: cli.rs  config.rs  custom_script.rs  entity.rs  lib.rs  light_scale.rs  main.rs  persistent_storage.rs  rotate_prop_static.rs  texture_scale.rs  types.rs
src/cli/: check_illegal_brush.rs  check_missing_texture.rs  custom_script.rs  light_scale.rs  loop_wave.rs  map2mdl.rs  mod.rs  rotate_prop_static.rs  s2g.rs  split_model.rs  texture_scale.rs
src/gui/: _tile_example.rs  _tile_example2.rs  config.rs  constants.rs  map2prop.rs  mod.rs  pane.rs  s2g.rs  utils.rs
src/modules/: blender_lightmap_baker_helper.rs  check_illegal_brush.rs  check_missing_texture.rs  custom_script.rs  duplicate_triangle.rs  find_low_scaling.rs  light_scale.rs  loop_wave.rs  map2mdl.rs  map2prop.rs  mod.rs  s2g.rs  skymod.rs  split_model.rs  textile.rs  waddy.rs
src/texture_scaler/: mod.rs
src/utils/: constants.rs  img_stuffs.rs  map_stuffs.rs  misc.rs  mod.rs  run_bin.rs  simple_calculs.rs  smd_stuffs.rs  wad_stuffs.rs
studiomdl/: Cargo.toml
studiomdl/src/: errors.rs  lib.rs  types.rs
vtf/: Cargo.toml
vtf/src/: lib.rs  parser.rs  types.rs
wad/: Cargo.toml
wad/src/: byte_writer.rs  constants.rs  error.rs  lib.rs  parser.rs  types.rs  utils.rs  writer.rs
wad/test/: makkon_gore.wad  tempdecal.wad  wad_test.wad  wad_test2.wad
(+59 files in other folders)
