[package]
name = "gchimp"
authors = [ "Lê Hàn Minh Khang (Khang Le) <mkhangle20@gmail.com>" ]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.27.0"
map = { path = "map" }
qc = { version = "0.1.0", path = "qc" }
rayon = "1.10.0"
rhai = "1.17.1"
smd = { path = "smd" }
eyre = "0.6.12"
toml = { version = "0.8.13", features = ["default"]}
serde = { version = "1.0.202", features = ["derive"] }
quantette = { version = "0.2.0", features = ["kmeans", "threads", "pipelines", "colorspaces"] }
image = { version = "0.25.1", features = ["png"] }
clap = { version = "4.5.4", features = ["derive"] }
ndarray = "0.15.6"

# egui stuffs
eframe = { version = "0.27.2", features = ["accesskit", "default_fonts", "wayland", "x11"] }
env_logger = "0.11.3"
egui_tiles = "0.8.0"
rfd = "0.14.1"
egui_extras = {version = "*", features = ["all_loaders"]}

[workspace]
members = [".", "map", "smd", "qc" ]
