[package]
name = "gchimp"
authors = [ "Lê Hàn Minh Khang (Khang Le) <mkhangle20@gmail.com>" ]
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
smd = { path = "smd" }
map = { path = "map" }
qc = { path = "qc" }
wad = { path = "wad" }
bsp = { path = "bsp" }
dem = { git = "https://github.com/khanghugo/dem.git" }
vtf = { version = "0.1.0", path = "vtf" }

# dependencies
glam = "0.27.0"
rayon = "1.10.0"
rhai = "1.17.1"
eyre = "0.6.12"
toml = { version = "0.8.13", features = ["default"]}
serde = { version = "1.0.202", features = ["derive"] }
quantette = { version = "0.2.0", features = ["kmeans", "threads", "pipelines", "colorspaces"] }
image = { version = "0.25.1", features = ["png"] }
clap = { version = "4.5.4", features = ["derive"] }
ndarray = "0.15.6"
arboard = "3.4.0"
gcd = "2.3.0"
serde_json = "1.0.125"
nom = "7.1.3"
rand = "0.8.5"

# egui stuffs
eframe = { version = "0.28.1", features = ["accesskit", "default_fonts", "wayland", "x11"] }
egui_tiles = "0.9.0"
rfd = "0.14.1"
egui_extras = {version = "0.28.0", features = ["all_loaders"]}

[workspace]
members = [".", "map", "smd", "qc" , "wad", "bsp", "byte_writer", "vtf"]
