[workspace]
members = ["map", "smd", "qc" , "wad", "bsp", "byte_writer", "vtf", "gchimp", "gchimp-native", "gchimp-web", "mdl", "common", "spr"]

[workspace.package]
authors = [ "Lê Hàn Minh Khang (Khang Le) <mkhangle20@gmail.com>" ]
version = "26.21.0"
edition = "2024"

[profile.release]
strip = true
# lto = true
