[package]
name = "common"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
vtf = { path = "../vtf" }
mdl = { path = "../mdl" }

cgmath = "0.18.0"
eyre = "0.6.12"
image = "0.25.10"
nom = "7.1.3"
quantette = { version = "0.3.0", features = [
    "kmeans",
    "threads",
    "pipelines",
    "colorspaces",
] }
rayon = "1.12.0"
lazy_static = "1.5.0"
