[package]
name = "gchimp-native"
version.workspace = true
edition.workspace = true

[dependencies]
# local dependencies
gchimp = { path = "../gchimp" }
smd = { path = "../smd" }
map = { path = "../map" }
qc = { path = "../qc" }
wad = { path = "../wad" }
bsp = { path = "../bsp" }
dem = { git = "https://github.com/khanghugo/dem.git" }
vtf = { path = "../vtf" }

# dependencies
eyre = "0.6.12"
clap = { version = "4.5.4", features = ["derive"] }
toml = { version = "0.8.13", features = ["default"] }
serde = { version = "1.0.202", features = ["derive"] }
image = { version = "0.25.1", features = ["png"] }
rayon = "1.10.0"

# egui stuffs
eframe = { version = "0.29.1", features = ["accesskit", "default_fonts", "wayland", "x11"] }
egui_tiles = "0.10.1"
rfd = "0.14.1"
egui_extras = {version = "0.29.1", features = ["all_loaders", "http"]}

# iced stuffs
iced = { version = "0.13.1", features = ["image"] }
iced_aw = { version = "0.12.2", default-features = false, features = [ "context_menu", "menu" ] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
arboard = "3.4.0" # is not available on wasm32
