[package]
name = "gchimp-native"
version.workspace = true
edition.workspace = true

[dependencies]
# local dependencies
gchimp = { path = "../gchimp" }
smd = { path = "../smd" }
map = { path = "../map" }
qc = { path = "../qc" }
wad = { path = "../wad" }
bsp = { path = "../bsp" }
dem = { git = "https://github.com/khanghugo/dem.git" }
vtf = { path = "../vtf" }

# dependencies
eyre = "0.6.12"
clap = { version = "4.5.4", features = ["derive"] }
toml = { version = "0.8.13", features = ["default"] }
serde = { version = "1.0.202", features = ["derive"] }
image = { version = "0.25.1", features = ["png"] }
rayon = "1.10.0"

# egui stuffs
eframe = { version = "0.33.0", features = ["accesskit", "default_fonts", "wayland", "x11", "wgpu"] }
egui_tiles = "0.14.0"
rfd = "0.14.1"
egui_extras = {version = "0.33.0", features = ["all_loaders", "http"]}
egui-wgpu = "0.33.0"
walkdir = "2.5.0"
cgmath = "0.18.0"
mdl = { version = "0.3.5", path = "../mdl" }
common = { version = "0.3.5", path = "../common" }
bytemuck = "1.24.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
arboard = "3.4.0" # is not available on wasm32
