[package]
name = "gchimp-web"
version.workspace = true
edition.workspace = true

[dependencies]
bsp = { version = "0.1.0", path = "../bsp" }
console_error_panic_hook = "0.1.7"
gchimp = { path = "../gchimp" }
dem = { git = "https://github.com/khanghugo/dem.git" }

wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = "0.3.72"

[lib]
crate-type = ["cdylib", "rlib"]
