[package]
name = "gchimp-web"
version.workspace = true
edition.workspace = true

[dependencies]
gchimp = { path = "../gchimp" }
smd = { path = "../smd" }
bsp = { path = "../bsp" }

dem = "0.2.3"

console_error_panic_hook = "0.1.7"
zip = { version = "8.5.1", features = ["deflate"], default-features = false }

wasm-bindgen = "0.2.118"
web-sys = "0.3.95"

# fuck fuck fuck
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[lib]
crate-type = ["cdylib", "rlib"]

# need this
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]