[package]
name = "gchimp"
authors = [ "Lê Hàn Minh Khang (Khang Le) <mkhangle20@gmail.com>" ]
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# local
smd = { path = "../smd" }
map = { path = "../map" }
qc = { path = "../qc" }
wad = { path = "../wad" }
bsp = { path = "../bsp" }
dem = { git = "https://github.com/khanghugo/dem.git" }
vtf = { version = "0.1.0", path = "../vtf" }

# dependencies
glam = "0.27.0"
rayon = "1.10.0"
rhai = "1.17.1"
eyre = "0.6.12"
toml = { version = "0.8.13", features = ["default"]}
serde = { version = "1.0.202", features = ["derive"] }
quantette = { version = "0.2.0", features = ["kmeans", "threads", "pipelines", "colorspaces"] }
image = { version = "0.25.1", features = ["png"] }
clap = { version = "4.5.4", features = ["derive"] }
ndarray = "0.15.6"
gcd = "2.3.0"
serde_json = "1.0.125"
nom = "7.1.3"
rand = "0.8.5"
lazy_static = "1.5.0"
cuet = "0.1.0"

# enable js support for this random shit so that wasm32 can compile
getrandom = { version = "0.2.15", features = ["js"] }
